--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,13 @@ enable_language(CUDA)
 enable_testing()
 
 # setup CUDNN lib and include
-find_library(CUDNN_LIB cudnn HINTS $ENV{CUDNN_ROOT}/lib64)
-find_path(CUDNN_INCLUDE cudnn.h HINTS $ENV{CUDNN_ROOT}/include)
+# find_library(CUDNN_LIB cudnn HINTS $ENV{CUDNN_ROOT}/lib64)
+# find_path(CUDNN_INCLUDE cudnn.h HINTS $ENV{CUDNN_ROOT}/include)
 
 # compile flag
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --use_fast_math")
-include_directories(
-    ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
-    ${CUDNN_INCLUDE})
+include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 
 # exe
 add_executable(demo
